<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/menu_cambiar_dir_orden"
            android:title="@string/cambiar_orden" />

    <item
            android:id="@+id/menu_cambiar_ordenado"
            android:title="@string/cambiar_ordenado"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:contentDescription="@string/cambiar_ordenado"
            app:showAsAction="ifRoom" />

    <item
            android:id="@+id/menu_cambiar_filtrado"
            android:title="@string/cambiar_filtrado"
            android:icon="@drawable/ic_filter_list"
            android:contentDescription="@string/cambiar_filtrado"
            app:showAsAction="ifRoom" />
    <item
            android:id="@+id/menu_cambiar_resolucion"
            android:title="@string/cambiar_resolucion"
            android:contentDescription="@string/cambiar_resolucion" />
</menu>